2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
	* DETAILS: (automated) Add KEYWORDS

2005-11-01 Treeve Jelbert ,treeve01@pi.be>
	* DETAILS: version 1.2.9
	* BUILD qregister.diff: deleted, patch no longer applies	
	  still won't build with gcc-4.0.2

2005-07-21 Jose Bernardo <jbernardo@sourcemage.org>
	* DETAILS, DEPENDS: set gcc to 3.4, as it won't build with 4.0.x

2005-04-22 Sergey Lipnevich <sergey@sourcemage.org>
	* BUILD,qregister.diff: add patch for AMD64, it does nothing
	  to other platforms; same problem as in GMP, "q" register
	  change in GCC 3.1; when fixed, both patch and BUILD can be
	  removed.

2005-01-20 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD, gcc-3.4.patch: removed patch

2005-01-20 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 1.2.8 [Bug 8034]
	* CONFLICTS: deleted, SDL was removed from grimoire

2004-12-14 Eric Sandall <eric@sandall.us>
	* DEPENDS: Depends on g++
	  Formatted to Guru Handbook

2004-08-24 Arwed v. Merkatz <v.merkatz@gmx.net>
	* CONFLICTS: added missing file

2004-08-02 Eric Sandall <eric@sandall.us>
	* Renamed to sdl
	* DETAILS: Renamed to sdl
	  BUILD_API=2
	  Shortened SHORT
	* CONFLICTS: Conflicts with SDL

2004-05-08 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD, gcc-3.4.patch: fixed compilation with gcc 3.4

2004-02-24 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DETAILS: updated to 1.2.7
	* BUILD, alsa-1.0.patch: removed

2004-02-16 hgg <hgreig@bigpond.net.au>
	* DETAILS: update to 1.2.6
	* PRE_BUILD: delete
	* BUILD: remove gcc patching and directfb hack
	* DEPENDS: readd directfb

2004-02-11 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: removed the 2.6 fix

2004-01-07 hgg <hgreig@bigpond.net.au>
	* BUILD: add a -D flag if 2.6.0 headers are used.

2003-11-24 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD, alsa-1.0.patch: reenable alsa, just needs a small patch
	* DEPENDS: made nasm optional, added optional_depends on X11-LIBS,
	  aalib, libggi, svgalib, alsa-lib, arts and nas

2003-11-24 hgg <hgreig@bigpond.net.au>