@@ -1,0 +1,29 @@
+config_query  SDL_CFG  'Setup and install configure script?'  n        &&
+
+if [[ $SDL_CFG == y ]]; then
+
+  config_query  VID_CFG  'Select video driver?'  n                     &&
+  if [[ $VID_CFG == y ]]; then
+    config_query_list  SDL_VID  ''                                     \
+         x11 dga nanox fbcon directfb ggi svgalib aalib dummy
+  fi                                                                   &&
+
+  config_query  AUD_CFG  'Select audio driver?'  n                     &&
+  if [[ $AUD_CFG == y ]]; then
+    config_query_list  SDL_AUD  ''                                     \
+                              dsp alsa artsc esd nas dma disk
+  fi                                                                   &&
+
+  config_query  CD_CFG  'Use additional CD-ROM devices?'  n            &&
+  if [[ $CD_CFG == y ]]; then
+    config_query_string  SDL_CD                                        \
+    "Colon-separated list of additional CD-ROM devices: "
+  fi                                                                   &&
+
+  config_query  JOY_CFG  'Use additional joystick device?'  n          &&
+  if [[ $JOY_CFG == y ]]; then
+    config_query_string  SDL_JOY                                       \
+    "Additional joystick device: "
+  fi
+
+fi
