@@ -1,0 +1,9 @@
+default_install  &&
+
+# Install config file & script to set SDL environment variables
+if [[ $SDL_CFG == y ]]; then
+  install_config_file $SOURCE_DIRECTORY/smgl/sdl     \
+                $INSTALL_ROOT/etc/sysconfig/sdl      &&
+  install_config_file $SOURCE_DIRECTORY/smgl/sdl.sh  \
+                $INSTALL_ROOT/etc/profile.d/sdl.sh
+fi
