@@ -1,0 +1,5 @@
+default_pre_build                  &&
+cd $SOURCE_DIRECTORY               &&
+mkdir -p smgl                      &&
+cp $SCRIPT_DIRECTORY/sdl smgl/     &&
+cp $SCRIPT_DIRECTORY/sdl.sh smgl/
