@@ -1,0 +1,50 @@
+# These are environment variables that modify the behavior of SDL. See 
+# /usr/share/doc/sdl/html/sdlenvvars.html for detailed information.
+
+
+# Video
+
+# SDL_FBACCEL=0
+# SDL_FBDEV=
+# SDL_VIDEODRIVER=
+# SDL_VIDEO_CENTERED=y
+# SDL_VIDEO_GL_DRIVER=
+# SDL_VIDEO_X11_DGAMOUSE=y
+# SDL_VIDEO_X11_MOUSEACCEL=
+# SDL_VIDEO_X11_NODIRECTCOLOR=y
+# SDL_VIDEO_X11_VISUALID=
+# SDL_VIDEO_YUV_DIRECT=y
+# SDL_VIDEO_YUV_HWACCEL=1
+# SDL_WINDOWID=
+
+
+# Events/Input
+
+# SDL_MOUSE_RELATIVE=0
+# SDL_MOUSEDEV=
+# SDL_MOUSEDEV_IMPS2=y
+# SDL_MOUSEDRV=ELO
+# SDL_NO_RAWKBD=y
+# SDL_NOMOUSE=y
+
+
+# Audio
+
+# AUDIODEV=
+# SDL_AUDIODRIVER=
+# SDL_DISKAUDIOFILE=
+# SDL_DISKAUDIODELAY=
+# SDL_DSP_NOSELECT=y
+# SDL_PATH_DSP=
+
+
+# CD-ROM
+
+# SDL_CDROM=
+# SDL_DEBUG=y
+
+
+# Joystick
+
+# SDL_JOYSTICK_DEVICE=
+# SDL_LINUX_JOYSTICK=
