@@ -1,3 +1,12 @@
+2006-04-08 Juuso Alasuutari <iuso@sourcemage.org>
+	* sdl: Added, sysconfig file
+	* sdl.sh: Added, profile.d file
+	* PRE_BUILD: Added, copy sdl* files to $SOURCE_DIRECTORY/smgl/ 
+	  so they can be modified there if necessary before install
+	* CONFIGURE: Added, ask about sysconfig file settings
+	* BUILD: Added, sedit smgl/sdl based on CONFIGURE
+	* INSTALL: Added, install sdl* files if option is chosen
+
 2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
 	* DETAILS: (automated) Add KEYWORDS
 
